--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "deploy-mainnet": "truffle migrate --network mainnet",
     "deploy-testnet": "truffle migrate --network testnet",
+    "deploy-localhost": "truffle migrate --network localhost",
     "verify-mainnet": "truffle run verify PancakeFlashSwap --network mainnet",
     "verify-testnet": "truffle run verify PancakeFlashSwap --network testnet"
   },
